<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Dutch Calculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_percent"> Tip %: </string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="action_settings">Settings</string>
    <string name="zero_percent">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="headcount">Headcount</string>
    <string name="costPerPerson">Cost per Head</string>

</resources>
